--- a/build.gradle
+++ b/build.gradle
@@ -34,6 +34,12 @@ dependencies {
     // Postgres
     runtimeOnly 'org.postgresql:postgresql'
 
+    //Checks
+
+    implementation group: 'org.apache.commons', name: 'commons-collections4', version: '4.4'
+
+    implementation group: 'org.apache.commons', name: 'commons-lang3', version: '3.13.0'
+
     // Validation
     implementation 'javax.validation:validation-api:2.0.1.Final'
     implementation group: 'org.hibernate', name: 'hibernate-validator', version: '8.0.1.Final'
